---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2023-10-14
  Bugfixes:
    - Fixing train getting stuck when locomotice is at end
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2023-05-31
  Bugfixes:
    - Fixing invalid file name
  Changes:
    - Add special treatment of internal inserters to support wagon-filter-mode of Cybersync mod
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2022-07-20
  Minor Features:
    - Add support for loading two half-size Pyanodons cargo wagons from one BRL.
  Scripting:
    - Add remote interface to allow other mods to add to the list of allowed items.
  Bugfixes:
    - Fix crash when blueprinting and a BRL cannot be located. (https://mods.factorio.com/mod/railloader/discussion/62d5bd0bd0ad17fb9c31f7e5)
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2022-07-08
  Changes:
    - Add support for Fluidless Mining and Ore Washing.
    - Add bulk item list for BZ mods.
    - Update bulk item list for Krastorio 2.
    - Update bulk item list for Space Exploration.
    - Add bulk item list for Rich Rocks Requiem.
  Bugfixes:
    - Fix crash when blueprinting BRLs that are owned by a different force. (https://mods.factorio.com/mod/railloader/discussion/62c87c9c7308a6dee94d4d60)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-05-27
  Bugfixes:
    - Fix crash in call to create_entities. (https://mods.factorio.com/mod/railloader/discussion/60af46dfd33bab4dbb65ab0a)