@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.9
-Date: ????
-  Changes:
+Date: 2023-10-27
+  Bugfixes:
+    - Fixing: Method on_blueprint messing with other mods
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.8
 Date: 2023-10-14
